<package>

  <name>diagnostic_annotate</name>
  <version>1.0.0</version>
  <description>diagnostic_annotate</description>
  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/diagnostic_annotate</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Derek King</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>rospy</build_depend>
  <build_depend>diagnostic_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>rospy</run_depend>
  <run_depend>diagnostic_msgs</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>rospy</test_depend> -->
  <!-- <test_depend>diagnostic_msgs</test_depend> -->

</package>

